--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,11 @@
         "vlucas/phpdotenv": "^3.3"
     },
     "require-dev": {
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "phpunit/phpunit": "^7.0",
+        "sirbrillig/phpcs-variable-analysis": "^2.7",
         "squizlabs/php_codesniffer": "*"
     },
     "autoload": {
